--- a/index.html
+++ b/index.html
@@ -11,20 +11,28 @@
       integrity="sha512-fXnjLwoVZ01NUqS/7G5kAnhXNXat6v7e3M9PhoMHOTARUMCaf5qNO84r5x9AFf5HDzm3rEZD8sb/n6dZ19SzFA=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer" />
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="assets/style/main.css" />
     <link rel="stylesheet" href="assets/style/style.css" />
     <title>checkpoint4</title>
   </head>
 
-  <body>
-    <!-- SECTION -->
+  <body id="random-photo">
     <main class="p-2">
+      <!-- SECTION Todos & Author -->
+      <!-- #region -->
       <section class="container-fluid">
         <div class="d-flex justify-content-between">
-          <p>Images by someone not sure who though</p>
+          <div id="img-author"></div>
           <div id="user-todos" class="d-none">
-            <button data-bs-toggle="offcanvas" data-bs-target="#notes-canvas" class="btn btn-dark opacity-25 rounded-pill" type="button"> > <span id="todo-count" class="ms-3"></span> Todos Remaining</button>
+            <button data-bs-toggle="offcanvas" data-bs-target="#notes-canvas" class="btn btn-dark opacity-75 rounded-pill" type="button">
+              > <span id="todo-count" class="ms-3"></span> Todos Remaining
+            </button>
           </div>
         </div>
 
@@ -36,7 +44,7 @@
           <div class="offcanvas-body">
             <form onsubmit="app.TodosController.createTodo()">
               <div class="d-flex">
-                <input id="description" name="description" class="form-control">
+                <input id="description" name="description" class="form-control" />
                 <button class="btn btn-light ms-2">+</button>
               </div>
             </form>
@@ -45,33 +53,31 @@
           </div>
         </div>
       </section>
+      <!-- #endregion  -->
     </main>
 
     <!-- SECTION -->
-    <footer class="bg-dark text-light">
-      <nav class="navbar navbar-dark navbar-expand bg-dark text-light px-2"></nav>
-        <a class="navbar-brand" href="#">
-          <img src="https://codeworks.blob.core.windows.net/public/assets/img/cw-mark.png" height="45" alt="" loading="lazy" />
-          <span class="ml-2">checkpoint4</span>
-        </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup"
-          aria-expanded="false"
-          aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <!-- NAVLINKS -->
-            <!-- <a href="#/about" class="nav-link">About</a> -->
+    <footer>
+      <p class="text-center text-light">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto cum qui deserunt est?</p>
+      <section class="container-fluid">
+        <div class="row justify-content-center">
+          <div class="col-10 mb-4 rounded-pill p-4 footer-content">
+            <div class="row justify-content-between text-light">
+              <div class="col-md-4 align-self-center">
+                <p>26 C Sunny ☀</p>
+              </div>
+
+              <div class="col-md-4 align-self-center">
+                <h4 class="text-center">09:28am</h4>
+              </div>
+
+              <div class="col-md-4 align-self-center">
+                <div class="d-flex justify-content-end" id="authstate"></div>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="flex-grow-1 justify-content-end align-items-center d-flex" id="authstate"></div>
-      </nav>
+      </section>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
