--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <!-- SECTION -->
     <footer>
-      <p class="text-center text-light">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto cum qui deserunt est?</p>
+      <div id="quote"></div>
       <section class="container-fluid">
         <div class="row justify-content-center">
           <div class="col-10 mb-4 rounded-pill p-4 footer-content">
