--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <!-- SECTION Todos & Photo -->
       <!-- #region -->
       <section class="container-fluid">
-        <div class="d-flex justify-content-between">
-          <div class="details p-2 rounded text-center">
+        <div class="d-flex justify-content-between top-part">
+          <div class="details p-2 rounded text-center mb-2">
             <div id="img-author"></div>
             <button onclick="app.PhotoController.getPhoto(); app.QuotesController.getQuote();" class="btn btn-outline-light" type="button">New Quote | Picture</button>
           </div>
@@ -62,7 +62,7 @@
     <footer>
       <!-- SECTION Weather | Time | Quote -->
       <!-- #region -->
-      <div class="quote-design rounded px-1 py-2 w-50 great-quote" id="quote"></div>
+      <div class="quote-design rounded px-1 py-2 great-quote" id="quote"></div>
       <section class="container-fluid mt-4">
         <div class="row justify-content-center">
           <div class="col-10 mb-4 rounded-pill p-4 footer-content">
